improve logging and response codes, update OpenAPI
